tests/invalid/for_range_non_int/main.py
def run_case() -> None:
    for i in range(1.0, 5.0):
        print(i)

if __name__ == "__main__":
    run_case()
